--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+* { 
+  -moz-box-sizing: border-box; 
+  -webkit-box-sizing: border-box; 
+  box-sizing: border-box; 
+}
 html,
 body {
   padding: 0;
